@@ -273,6 +273,8 @@ ModelParser parse #(...) collections
 CollectionExpression renamed to ArrayExpression
 DynamicArrayExpression and support for { ... } in ModelParser with tests
 Removing CompositeExpression
+ModelParser refactor to support nested expressions
+MessageExpression.AsString taking precedence into account
 
 Angel "Java" Lopez
 http://www.ajlopez.com/en
